[gd_scene load_steps=12 format=3 uid="uid://dutaxj4b4gj6d"]

[ext_resource type="Script" path="res://scripts/main.gd" id="1_5bp6c"]
[ext_resource type="PackedScene" uid="uid://ce26vravpncf3" path="res://scenes/player.tscn" id="2_2u1i2"]
[ext_resource type="PackedScene" uid="uid://cv2danyvs7bnw" path="res://scenes/hud.tscn" id="2_u4lix"]
[ext_resource type="PackedScene" uid="uid://c8d02jvgqmhju" path="res://scenes/game_over_screen.tscn" id="3_ah6ax"]
[ext_resource type="PackedScene" uid="uid://bjit8vison281" path="res://scenes/player_spawn_area.tscn" id="5_o3j6w"]
[ext_resource type="AudioStream" uid="uid://bico8vjhg2b5y" path="res://assets/sounds/astroid_explosion.wav" id="6_urxw1"]
[ext_resource type="AudioStream" uid="uid://2uxr2axvq30a" path="res://assets/sounds/ship-explosion.mp3" id="7_iogvs"]
[ext_resource type="AudioStream" uid="uid://cgmvgbah8skev" path="res://assets/sounds/turbine.mp3" id="8_jlnlt"]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xmuyn"]
emission_shape = 3
emission_box_extents = Vector3(1, 384, 1)
particle_flag_disable_z = true
spread = 10.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = -10.0
initial_velocity_max = -10.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xp26i"]
emission_shape = 3
emission_box_extents = Vector3(1, 380, 1)
particle_flag_disable_z = true
spread = 5.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = -20.0
initial_velocity_max = -20.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 3.0
scale_max = 3.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_gnxsd"]
emission_shape = 3
emission_box_extents = Vector3(1, 380, 1)
particle_flag_disable_z = true
spread = 5.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = -30.0
initial_velocity_max = -30.0
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0
scale_min = 5.0
scale_max = 5.0

[node name="Main" type="Node2D"]
script = ExtResource("1_5bp6c")

[node name="UI" type="CanvasLayer" parent="."]

[node name="HUD" parent="UI" instance=ExtResource("2_u4lix")]

[node name="GameOverScreen" parent="UI" instance=ExtResource("3_ah6ax")]
visible = false

[node name="Player" parent="." instance=ExtResource("2_2u1i2")]
position = Vector2(640, 360)

[node name="Bullets" type="Node" parent="."]

[node name="Asteroids" type="Node" parent="."]

[node name="PlayerSpawnPos" type="Node2D" parent="."]
position = Vector2(640, 360)

[node name="PlayerSpawnArea" parent="PlayerSpawnPos" instance=ExtResource("5_o3j6w")]

[node name="AsteroidExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("6_urxw1")

[node name="PlayerExplosionSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_iogvs")

[node name="RocketSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource("8_jlnlt")

[node name="Starfields" type="Node2D" parent="."]

[node name="StarfieldBack" type="GPUParticles2D" parent="Starfields"]
visible = false
z_index = -100
position = Vector2(1314, 384)
amount = 1000
process_material = SubResource("ParticleProcessMaterial_xmuyn")
lifetime = 140.0
preprocess = 280.0

[node name="StarfieldMiddle" type="GPUParticles2D" parent="Starfields"]
visible = false
z_index = -80
position = Vector2(1314, 384)
amount = 250
process_material = SubResource("ParticleProcessMaterial_xp26i")
lifetime = 140.0
preprocess = 280.0
speed_scale = 1.1

[node name="StarfieldFront" type="GPUParticles2D" parent="Starfields"]
z_index = -80
position = Vector2(1314, 384)
amount = 30
process_material = SubResource("ParticleProcessMaterial_gnxsd")
lifetime = 140.0
preprocess = 280.0

[connection signal="coasting" from="Player" to="." method="_on_player_coasting"]
[connection signal="thrusting" from="Player" to="." method="_on_player_thrusting"]
